--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,35 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.App-container{
+  display: flex;
+  max-width: 700px;
+  justify-content: space-around;
+
+}
+
+.item{
+  border: 0.5px solid black;
+  width: 200px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.item-container{
+  border: 0.5px solid black;
+  width: 250px;
+  padding: 5px;
+  margin: 5px;
+  text-align: center;
+  min-height: 200px;
+}
+
+.target{
+  border: 0.5px solid black;
+  width: 250px;
+  padding: 5px;
+  margin: 5px;
+  text-align: center;
+  min-height: 200px;
+}
